--- a/Text/section1/section1.tex
+++ b/Text/section1/section1.tex
@@ -32,6 +32,8 @@
 
 Сообщество --- это такой подграф, чьи узлы плотно связаны, однако структурная сплочённость узлов можно определить по разному. Одно из определений вводит понятие \emph{клик}. Клик --- это максимальный такой подграф, состоящий из трёх и более вершин, каждая из которых связана с каждой другой вершиной из клика. $n$-клик --- это максимальный подграф, в котором самое большое геодезическое расстояние между любыми двумя вершинами не превосходит $n$. Другое определение гласит, что подграф $G'$ является сообществом, если сумма всех степеней внутри $G'$ больше суммы всех степеней, направленных в остальную часть графа \cite{Wasserman:1994}. Сообщества называются смежными, если существует ребро, направленное из вершины первого сообщества в вершину второго.
 
+Множество сообществ $\{C_1, \dots, C_{K_1}\}$ называется разбиением на сообщества на основе разбиения $\hat{P} = \left\{\hat{C}_1, \dots \hat{C}_{K_2}\right\}$, если $\forall i \in 1..K_2\ \exists j \in 1..K_1: \hat{C}_i \subset C_j$.
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -66,15 +68,16 @@ Q(G, P) = \frac{1}{2L} \sum_{x, y \in 1..N} \left(w_{xy} - \frac{s_x s_y}{2L}\ri
 
 Ньюман в 2004 году предложил алгоритм, максимизирующий модулярность \cite{Newman:2004}. Алгоритм начинается с разбиения графа на $N$ сообществ из одной вершины, а затем на каждой итерации просматривает все пары сообществ и соединяет ту пару, которая даст наибольший выигрыш модулярности. Такой алгоритм достаточно долго работает и страдает от несбалансированного объединения сообществ --- сообщества растут с разной скоростью, большие кластеры соединяются со своими небольшими соседями независимо от того, выгодно это глобально или нет \cite{Ovelgoenne&Geyer-Schulz:2012a}.
 
-Поэтому был предложен рандомизированный жадный алгоритм (RG) \cite{Ovelgoenne&Geyer-Schulz:2010}, который на каждой итерации рассматривал $k$ случайных сообществ и смежных к ним сообществ, а затем так же соединял пару, дающую наибольший выигрыш. Трудоёмкость такого алгоритма примерно равна $O(kL \ln N)$. И первый алгоритм, и его рандомизированная вариация соединяют сообщества, записывая только номера соединений, до тех пор, пока не останется только одно сообщество, а затем создают разбиение из списка соединений до того момента, когда достигалась максимальная модулярность (так как в результате лучшего соединения модулярность может уменьшиться).
+Поэтому был предложен рандомизированный жадный алгоритм (Randomized Greedy, \emph{RG}) \cite{Ovelgoenne&Geyer-Schulz:2010}, который на каждой итерации рассматривал $k$ случайных сообществ и смежных к ним сообществ, а затем так же соединял пару, дающую наибольший выигрыш. Трудоёмкость такого алгоритма примерно равна $O(kL \ln N)$. И первый алгоритм, и его рандомизированная вариация соединяют сообщества, записывая только номера соединений, до тех пор, пока не останется только одно сообщество, а затем создают разбиение из списка соединений до того момента, когда достигалась максимальная модулярность (так как в результате лучшего соединения модулярность может уменьшиться). Далее в работе рандомизированный жадный алгоритм с параметром $k$ будет обозначаться $RG_k$.
 
-Можно отметить, что таким алгоритмом можно кластеризовать не только граф, но и граф с некоторым начальным разбиением, в котором можно сообщества разбивать дальше, но нельзя их соединять. При этом только немного поменяется начальный этап инициализации матрицы $\mathbf{e}$ и вектора $\mathbf{a}$ (смотри Алгоритм \ref{alg:RG}).
+Можно отметить, что таким алгоритмом можно выделять сообщества на основе некоторого начального разбиения, при этом только немного поменяется начальный этап инициализации матрицы $\mathbf{e}$ и вектора $\mathbf{a}$ (смотри Алгоритм \ref{alg:RG-init}).
 
-\begin{algorithm}[p]
+
+\begin{algorithm}[h]
+%\setstretch{1.35}
 \SetAlgoLined
 \KwIn{Невзвешенный неориентированный граф $G = (\mathscr{N}, \mathscr{L})$, параметр $k$}
 \KwOut{Разбиение на сообщества $P$}
-\BlankLine
 \For{$i \in 1..N$}{
 	\For{$j \in 1..N$}{
 		\eIf{$i$ и $j$ смежные}{
@@ -88,6 +91,12 @@ Q(G, P) = \frac{1}{2L} \sum_{x, y \in 1..N} \left(w_{xy} - \frac{s_x s_y}{2L}\ri
 $global\Delta Q \leftarrow 0$\;
 $max\_global\Delta Q \leftarrow -\infty$\;
 \BlankLine
+\caption{Этап инициализации рандомизированного жадного алгоритма}
+\label{alg:RG-init}
+\end{algorithm}
+
+%\setlength{\algoheightrule}{0.8pt}
+\begin{algorithm}[h]
 \For{$i \in 1..N$}{
 	$max\Delta Q \leftarrow -\infty$\;
 	\For{$j \in 1..k$}{
@@ -128,10 +137,10 @@ $P \leftarrow $ создать разбиение из $joins\_list[1..best\_ste
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Ансамблевая стратегия}
+\subsection{Схема кластеризации основных групп графа}
 \label{subsec:ens}
 
-Овельгённе и Гейер-Шульц в 2012 году выиграли 10th DIMACS Implementation Challenge с ансамблевой стратегией выделения сообществ (ES). Ансамблевая стратегия заключается в том, что сначала $s$ начальных алгоритмов разбивают граф на сообщества, и считается, что те вершины, в которых начальные алгоритмы сошлись во мнении определены по сообществам правильно, а те, которые остались, распределяет по сообществам финальный алгоритм \cite{Ovelgoenne&Geyer-Schulz:2012b}.
+Овельгённе и Гейер-Шульц в 2012 году выиграли на соревновании 10th DIMACS Implementation Challenge в категории \emph{кластеризация графа} со схемой кластеризации основных групп графа (Core Groups Graph Cluster, \emph{CGGC}). Схема заключается в том, что сначала $s$ начальных алгоритмов разбивают граф на сообщества, и считается, что те вершины, в которых начальные алгоритмы сошлись во мнении определены по сообществам правильно, а те, которые остались, распределяет по сообществам финальный алгоритм \cite{Ovelgoenne&Geyer-Schulz:2012b}.
 
 Формализовать это можно следующим образом:
 \begin{enumerate}
@@ -145,7 +154,7 @@ $P \leftarrow $ создать разбиение из $joins\_list[1..best\_ste
 $$v, w \in \mathscr{N}, \forall i \in 1..s\ :\ c_{P_i}(v) = c_{P_i}(w) \Rightarrow c_{\hat{P}}(v) = c_{\hat{P}}(w)$$
 $$v, w \in \mathscr{N}, \exists i \in 1..s\ :\ c_{P_i}(v) \ne c_{P_i}(w) \Rightarrow c_{\hat{P}}(v) \ne c_{\hat{P}}(w)$$
 
-Ансамблевую стратегию можно итерировать, заставляя начальные алгоритмы разбивать максимальное перекрытие и получившееся максимальное перекрытие до тех пор, пока это будет увеличивать модулярность. В таком случае схема будет выглядеть следующим образом:
+\emph{CGGC} можно итерировать, заставляя начальные алгоритмы разбивать максимальное перекрытие и получившееся максимальное перекрытие до тех пор, пока это будет увеличивать модулярность, такой алгоритм далее обозначается как \emph{CGGCi}. В таком случае схема будет выглядеть следующим образом:
 
 \begin{enumerate}
 	\item Инициализировать $\hat{P}$ разбиением из сообществ из одного узла
@@ -155,7 +164,7 @@ $$v, w \in \mathscr{N}, \exists i \in 1..s\ :\ c_{P_i}(v) \ne c_{P_i}(w) \Righta
 	\item Финальным алгоритмом создать разбиение $\widetilde{P}$ графа $G$ на основе разбиения $P_{best}$ 
 \end{enumerate}
 
-В качестве начальных и финального алгоритма можно брать рандомизированный жадный алгоритм.
+В качестве начальных и финального алгоритма можно брать \emph{RG}.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -189,7 +198,7 @@ $$v, w \in \mathscr{N}, \exists i \in 1..s\ :\ c_{P_i}(v) \ne c_{P_i}(w) \Righta
 
 \subsection{Постановка задачи}
 
-Рандомизированный жадный алгоритм имеет один параметр $k$, в то время как ансамблевая имеет стратегия один параметр $s$ и, в случае использования рандомизированного жадного алгоритма в качестве начального и финального алгоритма, будет иметь два дополнительных параметра $k_1$ и $k_2$, то есть в целом три параметра. Если на параметры рандомизированного жадного алгоритма поставить ограничения, к примеру, $k_1 = k_2$, то то можно считать, что ансамблевая стратегия имеет два параметра, $s$ и $k$.
+Рандомизированный жадный алгоритм имеет один параметр $k$, в то время как схема кластеризации основных групп графа один параметр $s$ и, в случае использования \emph{RG} в качестве начального и финального алгоритма, будет иметь два дополнительных параметра $k_1$ и $k_2$, то есть в целом три параметра. Если на параметры \emph{RG} поставить ограничения, к примеру, $k_1 = k_2$, то то можно считать, что \emph{CGGC} имеет два параметра, $s$ и $k$.
 
 Часто алгоритмы на каждых входных данных имеют разные оптимальные параметры, то есть параметры, решающие задачу наилучшим образом. И алгоритм SPSA показал хорошие результаты в адаптировании параметров подобных алгоритмов, в ходе работы рассматриваемого алгоритма его параметры варьируются, довольно быстро достигая оптимальной точки.
 
@@ -200,28 +209,28 @@ $$v, w \in \mathscr{N}, \exists i \in 1..s\ :\ c_{P_i}(v) \ne c_{P_i}(w) \Righta
 
 \subsection{Тестовые графы}
 
-В качестве тестовых графов были взяты графы, используемые для оценки алгоритмов на 10th DIMACS Implementation Challenge. Далее представлены используемые графы с кратким описанием, в порядке увеличения веса файла в формате METIS Graph.
+В качестве тестовых графов были взяты графы, используемые для оценки алгоритмов на соревновании 10th DIMACS Implementation Challenge. Далее представлены используемые графы с кратким описанием, в порядке увеличения количества узлов.
 
 \begin{itemize}
 	
 	\item \textbf{karate}, $N = 34,\;L = 78$: социальная сеть между 34 членами карате клуба с 1970 по 1972 год \cite{Zachary:1977}
-	\item \textbf{dolphins}, $N = 62,\;L = 159$: социальная сеть частых общений между 62 дельфинами \cite{Lusseau&al:2003}
 	\item \textbf{chesapeake}, $N = 39,\;L = 170$: сеть мезогалинных вод Чесапикского залива \cite{Baird&Ulanowicz:1989}
-	\item \textbf{adjnoun}, $N = 112,\;L = 425$: сеть смежности частых прилагательных и существительных в романе <<Давид Копперфильд>> Чарльза Диккенса \cite{Newman:2006}
+	\item \textbf{dolphins}, $N = 62,\;L = 159$: социальная сеть частых общений между 62 дельфинами \cite{Lusseau&al:2003}
 	\item \textbf{polbooks}, $N = 105,\;L = 441$: сеть книг о политике США, изданных во время президентских выборов 2004 года. Рёбра между книгами означают частые покупки одними и теми же покупателями. Сеть скомпилирована Валдисом Кребсом, однако не была опубликована
+	\item \textbf{adjnoun}, $N = 112,\;L = 425$: сеть смежности частых прилагательных и существительных в романе <<Давид Копперфильд>> Чарльза Диккенса \cite{Newman:2006}
 	\item \textbf{football}, $N = 115,\;L = 613$: сеть игр в американский футбол между колледжами из дивизиона IA во время регулярного сезона осенью 2000 года \cite{Girvan&Newman:2002}
-	\item \textbf{celegans\_metabolic}, $N = 453,\;L = 2025$: метаболическая сеть Caenorhabditis elegans \cite{Duch&Arenas:2005}
 	\item \textbf{jazz}, $N = 198,\;L = 2742$: сеть джазовых музыкантов \cite{Gleiser&Danon:2003}
-	\item \textbf{netscience}, $N = 1589,\;L = 2742$: сеть соавторства среди учёных, работающих над сложными сетями \cite{Newman:2006}
+	\item \textbf{\celegans}, $N = 453,\;L = 2025$: метаболическая сеть Caenorhabditis elegans \cite{Duch&Arenas:2005}
 	\item \textbf{email}, $N = 1133,\;L = 5451$: сеть связей по электронной почте между членами Университета Ровира и Вирхилий \cite{Guimera&al:2003}
 	\item \textbf{polblogs}, $N = 1490,\;L = 16715$: сеть ссылок между веб блогами о политике США в 2005 году \cite{Adamic&Glance:2005}
+	\item \textbf{netscience}, $N = 1589,\;L = 2742$: сеть соавторства среди учёных, работающих над сложными сетями \cite{Newman:2006}
 	\item \textbf{PGPgiantcompo}, $N = 10680,\;L = 24316$: список узлов гигантской компоненты сети пользователей алгоритма Pretty-Good-Privacy для защищенного обмена информацией \cite{Boguna&al:2004}
 	\item \textbf{as-22july06}, $N = 22963,\;L = 48436$: структура интернета на уровне автономных систем на 22 июля 2006 года. Сеть создана Марком Ньюманом и не опубликована
 	\item \textbf{cond-mat-2003}, $N = 31163,\;L = 120029$: сеть соавторства среди учёных, публиковавших препринты в определённые архивы между 1995 и 2003 годами \cite{Newman:2001}
 	\item \textbf{caidaRouterLevel}, $N = 192244,\;L =  609066$: граф структуры интернета на уровне роутера, собранный ассоциацией CAIDA в апреле и мае 2003 года
 	\item \textbf{cnr-2000}, $N = 325557,\;L = 2738969$: небольшая часть обхода итальянского домена .cnr \cite{Boldi&Vigna:2004, Boldi&al:2011, Boldi&al:2004}
-	\item \textbf{in-2004}, $N = 1382908,\;L = 13591473$: небольшая часть обхода индийского домена .in \cite{Boldi&Vigna:2004, Boldi&al:2011, Boldi&al:2004}
 	\item \textbf{eu-2005}, $N = 862664,\;L = 16138468$: небольшая часть обхода домена Европейского союза .eu \cite{Boldi&Vigna:2004, Boldi&al:2011, Boldi&al:2004}
+	\item \textbf{in-2004}, $N = 1382908,\;L = 13591473$: небольшая часть обхода индийского домена .in \cite{Boldi&Vigna:2004, Boldi&al:2011, Boldi&al:2004}
 
 \end{itemize}
 
