--- a/Text/section2/section2.I.tex
+++ b/Text/section2/section2.I.tex
@@ -7,7 +7,7 @@
 
 \subsection{Применимость алгоритма SPSA}
 
-Для того, чтобы алгоритм SPSA был применим --- необходимо иметь выпуклую функцию качества, которую необходимо минимизировать. В большинстве модулярность результатов работы рандомизированного жадного алгоритма на разных графах с разными значениями параметра $k$ будет выглядеть следующим образом:
+Для того, чтобы алгоритм SPSA был применим --- необходимо иметь выпуклую функцию качества, которую необходимо минимизировать. В большинстве модулярность результатов работы \emph{RG} на разных графах с разными значениями параметра $k$ будет выглядеть следующим образом:
 
 \begin{figure}[H]
 	\begin{tikzpicture}
@@ -125,7 +125,7 @@
 		\legend{eu-2005};
 		\end{axis}
 	\end{tikzpicture}
-	\caption{Зависимость модулярности от $k$ для рандомизированного случайного алгоритма на разных графах}
+	\caption{Зависимость модулярности от $k$ в результатах работы $RG_k$ на разных графах}
 \end{figure}
 
 Результаты показывают разделение поведения алгоритма на разных графах на два возможных случая: в первом алгоритм принимает наилучший результат при некотором небольшом, но разном $k_{best}$ (например работа алгоритма на графе \emph{karate}). Во втором результаты алгоритма постепенно возрастают, приближаясь к некоторой асимптоте (хорошим примером будет работа алгоритма на графе \emph{netscience}. К первому случаю так же относится такое поведение, в котором алгоритм быстро (с ростом $k$) достигает своего лучшего значения, и затем его результаты очень несильно падают, и в дальнейшем держатся того же значения (такое выполняется, например, на графе \emph{in-2004}).
@@ -147,7 +147,7 @@
 		\addplot table [x={k}, y={q}]{data/arg/validity/auto13.csv};
 		\end{axis}
 	\end{tikzpicture}
-	\caption{Зависимость модулярности от $k$ для рандомизированного случайного алгоритма на автоматически сгенерированном графе \emph{auto40} с параметрами $N = 40.000,\;K = 40,\;p_1 = 0.1,\;p_2 = 5\cdot 10^{-4}$}
+	\caption{Зависимость модулярности от $k$ для разбиения на сообщества автоматически сгенерированного графа \emph{auto40} с параметрами $N = 40.000,\;K = 40,\;p_1 = 0.1,\;p_2 = 5\cdot 10^{-4}$ алгоритмом $RG_k$}
 	\label{fig:q-auto13}
 \end{figure}
 
@@ -186,10 +186,10 @@
 		    no marks
 		]
 		\addplot[red] table [x={k}, y={time}]{data/arg/validity/celegans_metabolic.csv};
-		\legend{celegans\_metabolic};
+		\legend{\celegans};
 		\end{axis}
 	\end{tikzpicture}
-	\caption{Зависимость времени $t$ в миллисекундах от $k$ для рандомизированного случайного алгоритма на графах \emph{polbooks} и \emph{celegans\_metabolic}}
+	\caption{Зависимость времени $t$ в миллисекундах от $k$ для результатов работы $RG_k$ на графах \emph{polbooks} и \emph{\celegans}}
 \end{figure}
 
 Таким образом, вместо времени можно использовать значение $k$. Максимальное значение модулярности, которое может быть достигнуто на графе очень сильно отличается, поэтому нет смысла использовать абсолютное значение модулярности, но имеет смысл использовать относительные значения. При вычислении центрального значения \eqref{eq:spsa-central} в алгоритме одновременно возмущаемой стохастической аппроксимации использутся только разность функций качества. Таким образом, если использовать в функции качества логарифмы от модулярности --- разность функций укажет, во сколько раз модулярность изменилась.
@@ -276,7 +276,7 @@ f(Q, k) = -\alpha (\ln Q - \beta \ln k),\;\alpha > 0, \beta \ge 0
 
 \subsection{Адаптивный алгоритм}
 
-При использовании алгоритма SPSA для рандомизированного жадного алгоритма предлагается разбить действие алгоритма на шаги длиной в $\sigma$ итераций. В течении каждого шага используется одно значение $k$. После каждого шага можно считать прирост модулярности, но вместо этого имеет смысл считать медиану прироста модулярности за $\sigma$ итераций --- так как алгоритм рандомизированный, время от времени будут появляться очень хорошие соединения сообществ, которые будут портить функцию качества, такой большой прирост может появиться даже при очень плохом $k$. В таком случае схема алгоритма будет выглядеть следующим образом:
+При использовании алгоритма SPSA в рандомизированном жадном алгоритме предлагается разбить действие алгоритма на шаги длиной в $\sigma$ итераций. В течении каждого шага используется одно значение $k$. После каждого шага можно считать прирост модулярности, но вместо этого имеет смысл считать медиану прироста модулярности за $\sigma$ итераций --- так как алгоритм рандомизированный, время от времени будут появляться очень хорошие соединения сообществ, которые будут портить функцию качества, такой большой прирост может появиться даже при очень плохом $k$. В таком случае схема алгоритма будет выглядеть следующим образом:
 
 \begin{enumerate}
 	\item Выбор начальной центральной точки $\hat{k}_0 \in \mathbb{N}$, счётчик $n = 0$, выбор размера возбуждения $d \in \mathbb{N}$, коэффициентов функции качества $\alpha, \beta \in \mathbb{R},\; \alpha > 0,\;\beta \ge 0$, и $\sigma \in \mathbb{N}$ --- количество итераций в одном шаге
@@ -292,7 +292,7 @@ f(Q, k) = -\alpha (\ln Q - \beta \ln k),\;\alpha > 0, \beta \ge 0
 	\item Далее происходит переход на второй пункт
 \end{enumerate}
 
-Алгоритм заканчивает работу в тот момент, когда для рассмотрения осталось ровно одно сообщество.
+Алгоритм заканчивает работу в тот момент, когда для рассмотрения осталось ровно одно сообщество. Далее в работе этот алгоритм называется \emph{адаптивным рандомизированным жадным алгоритмом} или \emph{ARG} (Adaptive Randomized Greedy).
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -356,7 +356,7 @@ f(Q, k) = -\alpha (\ln Q - \beta \ln k),\;\alpha > 0, \beta \ge 0
 		\addplot table [x={alpha}, y={q}]{data/arg/alpha/cnr/cnr_alpha.csv};
 		\end{axis}
 	\end{tikzpicture}
-	\caption{Зависимость модулярности от параметра $\alpha$ в работе адаптивного рандомизированного жадного алгоритма на графах \emph{cond-mat-2003}, \emph{caidaRouterLevel}, \emph{cnr-2000}}
+	\caption{Зависимость модулярности от параметра $\alpha$ в работе \emph{ARG} на графах \emph{cond-mat-2003}, \emph{caidaRouterLevel}, \emph{cnr-2000}}
 	\label{fig:alpha}
 \end{figure}
 
