--- a/Text/section2/section2.II.tex
+++ b/Text/section2/section2.II.tex
@@ -75,7 +75,7 @@
 
 \subsection{Количество итераций в одном шаге}
 
-Параметр $\sigma$ указывает, как часто меняется $k$ в рандомизированного жадном алгоритме. Так как в функции качества используется медиана прироста модулярности, а не прирост модулярности за все $\sigma$ шагов --- при изменении $\sigma$ нет необходимости менять функцию качества, модулярность прироста будет оставаться приблизительно такой же по величине, в то время как прирост модулярности линейно зависит от $\sigma$. Зависимость модулярности от количества итераций в одном шаге при $d = 5,\ f(\mu, k) = -10 \ln \mu,\ \hat{k}_0 = 10$ принимает такой вид:
+Параметр $\sigma$ указывает, как часто меняется $k$ в ходе работы \emph{ARG}. Так как в функции качества используется медиана прироста модулярности, а не прирост модулярности за все $\sigma$ итераций --- при изменении $\sigma$ нет необходимости менять функцию качества, модулярность прироста будет оставаться приблизительно такой же по величине, в то время как прирост модулярности линейно зависит от $\sigma$. Зависимость модулярности от количества итераций в одном шаге при $d = 5,\ f(\mu, k) = -10 \ln \mu,\ \hat{k}_0 = 10$ принимает такой вид:
 
 \begin{figure}[H]
 	\begin{tikzpicture}
@@ -183,7 +183,7 @@
 	\label{fig:arg-k0}
 \end{figure}
 
-Как можно заметить, на разных графах модулярность ведёт себя по разному в зависимости от $\hat{k}_0$. График для графа \emph{cond-mat-2003} на рисунке \ref{fig:arg-k0} начинается от первого вхождения $\hat{k}_0 = 7$ (остальные от $\hat{k}_0 = 5$), так как при меньших значениях модулярность очень сильно падает. Это связано с тем, что $d = 5$ и следовательно $k_1^{-} = 1$, в то время как рандомизированный алгоритм с параметром $k = 1$ часто работает сильно хуже остальных. Однако выгоднее использовать небольшое значение $\hat{k}_0$, хоть и большее $d + 1$.
+Как можно заметить, на разных графах модулярность ведёт себя по разному в зависимости от $\hat{k}_0$. График для графа \emph{cond-mat-2003} на рисунке \ref{fig:arg-k0} начинается от первого вхождения $\hat{k}_0 = 7$ (остальные от $\hat{k}_0 = 5$), так как при меньших значениях модулярность очень сильно падает. Это связано с тем, что $d = 5$ и следовательно $k_1^{-} = 1$, в то время как $RG_1$ часто работает сильно хуже $RG_k$ с параметром $k > 1$. Однако выгоднее использовать небольшое значение $\hat{k}_0$, хоть и большее $d + 1$.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -227,52 +227,87 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Результаты}
+\subsection{Сравнение}
 \label{subsec:arg-res}
 
 На таблицах \ref{tab:arg-res-q} и \ref{tab:arg-res-t} показано сравнение результатов работы рандомизированного жадного алгоритма и адаптивного рандомизированного жадного алгоритма. В качестве графов для рассмотрения выбраны 7 графов.
 
-Рандомизированный жадный алгоритм в таблицах обозначается как $RG(\cdot)$ с параметром $k$ в качестве аргумента. Адаптивный рандомизированный жадный алгоритм обозначается как $ARG(\cdot)$ с параметром функции качества $\beta$ в качестве аргумента, остальные параметры при этом равны $d = 5,\ f(\mu, k) = -10 (\ln \mu - \beta \ln k),\ \sigma = 1000,\ \hat{k}_0 = 8$. Такой набор параметров не гарантирует наилучший результат на каждом графе или даже наилучший в среднем по всем графам результат для адаптивного алгоритма, однако показывает неплохие результаты.
+Рандомизированный жадный алгоритм в таблицах обозначается как $RG_k$. Адаптивный рандомизированный жадный алгоритм обозначается как $ARG_{\beta}$ с параметром функции качества $\beta$ в индексе, остальные параметры при этом равны $d = 5,\ f(\mu, k) = -10 (\ln \mu - \beta \ln k),\ \sigma = 1000,\ \hat{k}_0 = 8$. Такой набор параметров не гарантирует наилучший результат на каждом графе или даже наилучший в среднем по всем графам результат для адаптивного алгоритма, однако показывает неплохие результаты.
 
 Оба алгоритма --- рандомизированные, поэтому на каждом отдельном запуске результат может оказаться очень хорошим или сравнительно плохим, однако даст мало сведений о качестве алгоритма. Поэтому для каждого графа производилось определённое количество запусков, и в качестве модулярности бралась медиана значений, а в качестве времени --- среднее, для повышения точности измерения времени.
 
-Так, для графа \emph{as-22july06} производился 101 запуск, для \emph{cond-mat-2003} 51 запуск, для \emph{caidaRouterLevel} и \emph{cnr-2000} 11 запусков, для \emph{in-2004} пять запусков, и для \emph{eu-2005} три запуска. Для кратости в таблице эти графы записываются как \emph{22july} вместо \emph{as-22july06}, \emph{cond} вместо \emph{cond-mat-2003}, \emph{caida} вместо \emph{caidaRouterLevel} и \emph{cnr} вместо \emph{cnr-2000}.
+Так, для графа \emph{as-22july06} производился 101 запуск, для \emph{cond-mat-2003} 51 запуск, для \emph{caidaRouterLevel} и \emph{cnr-2000} 11 запусков, для \emph{in-2004} пять запусков, и для \emph{eu-2005} три запуска.% Для кратости в таблице эти графы записываются как \emph{22july} вместо \emph{as-22july06}, \emph{cond} вместо \emph{cond-mat-2003}, \emph{caida} вместо \emph{caidaRouterLevel} и \emph{cnr} вместо \emph{cnr-2000}.
 
 Кроме того, в таблицу вошли результаты работы над автоматически сгенерированным графом \emph{auto40}, который уже появлялся в работе, к примеру в рисунке \ref{fig:q-auto13}. Для этого графа для повышения точности производилось 11 запусков.
 
+% \begin{table}[H]
+% 	\caption{Модулярности разбиений, полученных в результате работы рандомизированного жадного алгоритма и адаптивного рандомизированного жадного алгоритма с разными параметрами на тестовых графах}
+% 	\label{tab:arg-res-q}
+% 	\begin{tabularx}{\textwidth}{XR{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}}\hline
+% 				& 22july 	& cond 		& auto40	& caida 	& cnr 		& eu-2005	& in-2004		\\\hline
+% 	RG(1) 		& 0.65281	& 0.00012 	& 0.78944	& 0.01938	& 0.90237 	& 0.92765	& 0.00026	\\
+% 	RG(3)		& 0.64658	& 0.19727	& 0.79988	& 0.81101	& 0.91192	& 0.92559	& 0.97836	\\
+% 	RG(10)		& 0.64024	& 0.70738	& 0.80417	& 0.79883	& 0.91144	& 0.91780	& 0.97185	\\
+% 	RG(50)		& 0.63479	& 0.69403	& 0.80273	& 0.79300	& 0.90997	& 0.90416	& 0.97596	\\
+% 	ARG(0)		& 0.64262	& 0.71129	& 0.80136	& 0.79970	& 0.91028	& 0.91062	& 0.97614	\\
+% 	ARG(0.01)	& 0.64041	& 0.71232	& 0.80145	& 0.80114	& 0.91041	& 0.91047	& 0.97615	\\
+% 	ARG(0.05)	& 0.64264	& 0.71193	& 0.80174	& 0.80216	& 0.91039	& 0.91048	& 0.97616	\\
+% 	ARG(0.1)	& 0.64134	& 0.69749	& 0.80152	& 0.80059	& 0.91108	& 0.91199	& 0.97618	\\
+% 	ARG(0.2)	& 0.64192	& 0.56631	& 0.80102	& 0.80176	& 0.91075	& 0.91242	& 0.97588	\\\hline
+% 	\end{tabularx}
+% \end{table}
+
 \begin{table}[H]
-	\caption{Модулярности разбиений, полученных в результатах работы рандомизированного жадного алгоритма и адаптивного рандомизированного жадного алгоритма с разными параметрами}
-	\label{tab:arg-res-q}
-	\begin{tabularx}{\textwidth}{XR{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}}\hline
-				& 22july 	& cond 		& auto40	& caida 	& cnr 		& eu-2005	& in-2004		\\\hline
-	RG(1) 		& 0.65281	& 0.00012 	& 0.78944	& 0.01938	& 0.90237 	& 0.92765	& 0.00026	\\
-	RG(3)		& 0.64658	& 0.19727	& 0.79988	& 0.81101	& 0.91192	& 0.92559	& 0.97836	\\
-	RG(10)		& 0.64024	& 0.70738	& 0.80417	& 0.79883	& 0.91144	& 0.91780	& 0.97185	\\
-	RG(50)		& 0.63479	& 0.69403	& 0.80273	& 0.79300	& 0.90997	& 0.90416	& 0.97596	\\
-	ARG(0)		& 0.64262	& 0.71129	& 0.80136	& 0.79970	& 0.91028	& 0.91062	& 0.97614	\\
-	ARG(0.01)	& 0.64041	& 0.71232	& 0.80145	& 0.80114	& 0.91041	& 0.91047	& 0.97615	\\
-	ARG(0.05)	& 0.64264	& 0.71193	& 0.80174	& 0.80216	& 0.91039	& 0.91048	& 0.97616	\\
-	ARG(0.1)	& 0.64134	& 0.69749	& 0.80152	& 0.80059	& 0.91108	& 0.91199	& 0.97618	\\
-	ARG(0.2)	& 0.64192	& 0.56631	& 0.80102	& 0.80176	& 0.91075	& 0.91242	& 0.97588	\\\hline
-	\end{tabularx}
-\end{table}
-\begin{table}[H]
-	\caption{Время работы (в миллисекундах) рандомизированного жадного алгоритма и адаптивного рандомизированного жадного алгоритма с разными параметрами}
-	\label{tab:arg-res-t}
-	\begin{tabularx}{\textwidth}{XR{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}}\hline
-				& 22july 	& cond 		& auto40	& caida 	& cnr 		& eu-2005	& in-2004	\\\hline
-	RG(1) 		& 177		& 58 		& 4,652		& 852		& 26,083	& 202,188	& 9,208		\\
-	RG(3)		& 189		& 184		& 4,591		& 9,114		& 26,056	& 200,686	& 487,953	\\
-	RG(10)		& 231		& 463		& 6,017		& 10,244	& 27,137	& 207,689	& 553,196	\\
-	RG(50)		& 464		& 931		& 12,558	& 15,217	& 33,592	& 246,170	& 607,408	\\
-	ARG(0)		& 238		& 477		& 6,526		& 11,573	& 30,033	& 233,761	& 622,813	\\
-	ARG(0.01)	& 241		& 477		& 6,807		& 11,607	& 30,465	& 226,869	& 625,124	\\
-	ARG(0.05)	& 238		& 474		& 6,479		& 11,514	& 29,054	& 225,748	& 617,345	\\
-	ARG(0.1)	& 233		& 476		& 6,428		& 11,509	& 29,971	& 226,427	& 640,454	\\
-	ARG(0.2)	& 222		& 351		& 6,105		& 11,220	& 29,784	& 266,038	& 616,187	\\\hline
-	\end{tabularx}
+	\caption{Модулярности разбиений, полученных в результате работы рандомизированного жадного алгоритма и адаптивного рандомизированного жадного алгоритма с разными параметрами на тестовых графах}
+ 	\label{tab:arg-res-q}
+ 	{\scriptsize
+ 	\begin{tabularx}{\textwidth}{Xrrrrrrrrr}\hline
+ 						& $RG_1$	& $RG_3$	& $RG_{10}$	& $RG_{50}$	& $ARG_0$	&$ARG_{0.01}$	&$ARG_{0.05}$	& $ARG_{0.1}$	& $ARG_{0.2}$	\\\hline
+ 	as-22july06			& 0.65281	& 0.64658	& 0.64024	& 0.63479	& 0.64262	& 0.64041	& 0.64264	& 0.64134	& 0.64192	\\
+ 	cond-mat-2003		& 0.00012	& 0.19727	& 0.70738	& 0.69403	& 0.71129	& 0.71232	& 0.71193	& 0.69749	& 0.56631	\\
+ 	auto40			 	& 0.78944	& 0.79988	& 0.80417	& 0.80273	& 0.80136	& 0.80145	& 0.80174	& 0.80152	& 0.80102	\\
+ 	caidaRouterLevel 	& 0.01938	& 0.81101	& 0.79883	& 0.79300	& 0.79970	& 0.80114	& 0.80216	& 0.80059	& 0.80176	\\
+ 	cnr-2000			& 0.90237	& 0.91192	& 0.91144	& 0.90997	& 0.91028	& 0.91041	& 0.91039	& 0.91108	& 0.91075	\\
+ 	eu-2005				& 0.92765	& 0.92559	& 0.91780	& 0.90416	& 0.91062	& 0.91047	& 0.91048	& 0.91199	& 0.91242	\\
+ 	in-2004				& 0.00026	& 0.97836	& 0.97185	& 0.97596	& 0.97614	& 0.97615	& 0.97616	& 0.97618	& 0.97588	\\\hline
+ 	\end{tabularx}
+ 	}
 \end{table}
 
-В большинстве случаев один или несколько параметров $k$ дают рандомизированному жадному алгоритму лучшие результаты, чем все результаты адаптивного рандомизированного алгоритма, однако адаптивный вариант даёт более стабильные результаты при не очень большом увеличении по времени. Можно заметить, что небольшие значения параметра $\beta$ дают лучшие результаты, чем нулевое значение, а при более больших значениях параметра время работы алгоритма уменьшается, но незначительно. В таблицу не попали результаты алгоритмов со значениями $\beta$ больше 0.2, где время работы действительно сильно снижалось, однако и значения модулярности получались слишком маленькими.
+% \begin{table}[H]
+% 	\caption{Время работы (в миллисекундах) рандомизированного жадного алгоритма и адаптивного рандомизированного жадного алгоритма с разными параметрами на тестовых графах}
+% 	\label{tab:arg-res-t}
+% 	\begin{tabularx}{\textwidth}{XR{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}}\hline
+% 				& 22july 	& cond 		& auto40	& caida 	& cnr 		& eu-2005	& in-2004	\\\hline
+% 	RG(1) 		& 177		& 58 		& 4,652		& 852		& 26,083	& 202,188	& 9,208		\\
+% 	RG(3)		& 189		& 184		& 4,591		& 9,114		& 26,056	& 200,686	& 487,953	\\
+% 	RG(10)		& 231		& 463		& 6,017		& 10,244	& 27,137	& 207,689	& 553,196	\\
+% 	RG(50)		& 464		& 931		& 12,558	& 15,217	& 33,592	& 246,170	& 607,408	\\
+% 	ARG(0)		& 238		& 477		& 6,526		& 11,573	& 30,033	& 233,761	& 622,813	\\
+% 	ARG(0.01)	& 241		& 477		& 6,807		& 11,607	& 30,465	& 226,869	& 625,124	\\
+% 	ARG(0.05)	& 238		& 474		& 6,479		& 11,514	& 29,054	& 225,748	& 617,345	\\
+% 	ARG(0.1)	& 233		& 476		& 6,428		& 11,509	& 29,971	& 226,427	& 640,454	\\
+% 	ARG(0.2)	& 222		& 351		& 6,105		& 11,220	& 29,784	& 266,038	& 616,187	\\\hline
+% 	\end{tabularx}
+% \end{table}
 
-Адаптивный рандомизированный жадный алгоритм можно сравнить с рандомизированным жандым алгоритмом при $k = 10$, так как он тоже даёт стабильные результаты, в отличии от $k = 1,\ k = 3$. Однако заметно, что адаптивный алгоритм в большинстве случаев даёт б\'{о}льшую модулярность.
+\begin{table}[H]
+	\caption{Время работы (в миллисекундах) рандомизированного жадного алгоритма и адаптивного рандомизированного жадного алгоритма с разными параметрами на тестовых графах}
+ 	\label{tab:arg-res-q}
+ 	{\scriptsize
+ 	\begin{tabularx}{\textwidth}{Xrrrrrrrrr}\hline
+ 						& $RG_1$	& $RG_3$	& $RG_{10}$	& $RG_{50}$	& $ARG_0$	&$ARG_{0.01}$	&$ARG_{0.05}$	& $ARG_{0.1}$	& $ARG_{0.2}$	\\\hline
+ 	as-22july06			& 177		& 189		& 231		& 464		& 238		& 241		& 238		& 233		& 222		\\
+ 	cond-mat-2003		& 58		& 184		& 463		& 931		& 477		& 477		& 474		& 476		& 351		\\
+ 	auto40			 	& 4,652		& 4,591		& 6,017		& 12,558	& 6,526		& 6,807		& 6,479		& 6,428		& 6,105		\\
+ 	caidaRouterLevel 	& 852		& 9,114		& 10,244	& 15,217	& 11,573	& 11,607	& 11,514	& 11,509	& 11,220	\\
+ 	cnr-2000			& 26,083	& 26,056	& 27,137	& 33,592	& 30,033	& 30,465	& 29,054	& 29,971	& 29,784	\\
+ 	eu-2005				& 202,188	& 200,686	& 207,689	& 246,170	& 233,761	& 226,869	& 225,748	& 226,427	& 266,038	\\
+ 	in-2004				& 9,208		& 487,953	& 553,196	& 607,408	& 622,813	& 625,124	& 617,345	& 640,454	& 616,187	\\\hline
+ 	\end{tabularx}
+ 	}
+\end{table}
+
+В большинстве случаев один или несколько параметров $k$ дают рандомизированному жадному алгоритму лучшие результаты, чем все результаты адаптивного рандомизированного алгоритма, однако адаптивный вариант даёт более стабильные результаты при не очень большом увеличении по времени. Можно заметить, что небольшие значения параметра $\beta$ дают лучшие результаты, чем нулевое значение, а при более б\'{о}льших значениях параметра время работы алгоритма уменьшается, но незначительно. В таблицу не попали результаты алгоритмов со значениями $\beta$ больше 0.2, где время работы действительно сильно снижалось, однако и значения модулярности получались слишком маленькими.
+
+$ARG$ можно сравнить с $RG_{10}$, так как он тоже даёт стабильные результаты, в отличии от $RG_{1},\ RG_{3}$. Однако заметно, что адаптивный алгоритм в большинстве случаев даёт б\'{о}льшую модулярность.
